src/objects/SFCCLtngPtr__SFDC_MDF__c/fields/SFCCLtngPtr__Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>SFCCLtngPtr__Activity_Date__c</fullName>
    <description>The date the activity is planned. Optionally incorporate a validation rule to ensure that there is ample lead time to approve the request before the planned activity.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Activity Date</label>
    <type>Date</type>
</CustomField>