src/objects/SFCCLtngPtr__SFDC_MDF__c/fields/SFCCLtngPtr__Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>SFCCLtngPtr__Activity_Type__c</fullName>
    <description>A list of available activity types. Customize as needed.</description>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>E-Mail Campaign</fullName>
            </value>
            <value>
                <fullName>Newsletter</fullName>
            </value>
            <value>
                <fullName>Online Advertising</fullName>
            </value>
            <value>
                <fullName>Print Advertising</fullName>
            </value>
            <value>
                <fullName>Sales Tools</fullName>
            </value>
            <value>
                <fullName>Seminar</fullName>
            </value>
            <value>
                <fullName>Tradeshow</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>