src/objects/SFCCLtngPtr__SFDC_MDF__c/fields/SFCCLtngPtr__Amount__c.field-meta.xml
<CustomField>
    <fullName>SFCCLtngPtr__Amount__c</fullName>
    <description>The requested amount. Consider activating a validation rule to enforce a certain minimum or maximum amount</description>
    <label>Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>