src/objects/SFCCLtngPtr__SFDC_MDF__c/fields/SFCCLtngPtr__Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>SFCCLtngPtr__Target_Audience__c</fullName>
    <description>The intended target audience for the fund request</description>
    <label>Target Audience</label>
    <type>TextArea</type>
</CustomField>