src/objects/SFCCLtngPtr__SFDC_MDF__c/validationRules/SFCCLtngPtr__Activity_Date_Days_In_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>SFCCLtngPtr__Activity_Date_Days_In_Future</fullName>
    <active>true</active>
    <description>Confirm that the marketing activity date is a certain # weeks in the future</description>
    <errorConditionFormula>AND(   OR (      ISNEW(),       ISCHANGED( SFCCLtngPtr__Activity_Date__c )),    SFCCLtngPtr__Activity_Date__c &lt; (TODAY()+14) )</errorConditionFormula>
    <errorDisplayField>SFCCLtngPtr__Activity_Date__c</errorDisplayField>
    <errorMessage>The activity date should be two weeks or more in the future</errorMessage>
</ValidationRule>