src/objects/SFCCLtngPtr__SFDC_MDF__c/validationRules/SFCCLtngPtr__Require_Other_Activity_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>SFCCLtngPtr__Require_Other_Activity_Type</fullName>
    <active>true</active>
    <description>Used to force the user to choose fill in the &apos;other activity type&apos; when &apos;other&apos; is chosen as the activity type.</description>
    <errorConditionFormula>AND(ISPICKVAL( SFCCLtngPtr__Activity_Type__c, &quot;Other&quot;), LEN(SFCCLtngPtr__Other_Activity_Type__c )=0)</errorConditionFormula>
    <errorDisplayField>SFCCLtngPtr__Other_Activity_Type__c</errorDisplayField>
    <errorMessage>Please provide details on the &apos;Other&apos; activity type.</errorMessage>
</ValidationRule>