src/objects/SFCCLtngPtr__SFDC_MDF__c/listViews/SFCCLtngPtr__All.listView-meta.xml
<ListView>
    <fullName>SFCCLtngPtr__All</fullName>
    <columns>NAME</columns>
    <columns>SFCCLtngPtr__Account__c</columns>
    <columns>SFCCLtngPtr__Budget__c</columns>
    <columns>SFCCLtngPtr__Approved_Date__c</columns>
    <columns>SFCCLtngPtr__Status__c</columns>
    <columns>SFCCLtngPtr__Amount__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>