src/objects/SFCCLtngPtr__SFDC_MDF__c/listViews/SFCCLtngPtr__Approved.listView-meta.xml
<ListView>
    <fullName>SFCCLtngPtr__Approved</fullName>
    <columns>NAME</columns>
    <columns>SFCCLtngPtr__Account__c</columns>
    <columns>SFCCLtngPtr__Approved_Date__c</columns>
    <columns>SFCCLtngPtr__Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SFCCLtngPtr__Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved</label>
</ListView>