src/objects/SFCCLtngPtr__SFDC_MDF__c/listViews/SFCCLtngPtr__Pending.listView-meta.xml
<ListView>
    <fullName>SFCCLtngPtr__Pending</fullName>
    <columns>NAME</columns>
    <columns>SFCCLtngPtr__Account__c</columns>
    <columns>SFCCLtngPtr__Status__c</columns>
    <columns>SFCCLtngPtr__Budget__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>SFCCLtngPtr__Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SFCCLtngPtr__Status__c</field>
        <operation>equals</operation>
        <value>Submitted,In Process</value>
    </filters>
    <label>Pending</label>
</ListView>