src/objects/SFCCLtngPtr__SFDC_MDF__c/listViews/SFCCLtngPtr__Rejected.listView-meta.xml
<ListView>
    <fullName>SFCCLtngPtr__Rejected</fullName>
    <columns>NAME</columns>
    <columns>SFCCLtngPtr__Account__c</columns>
    <columns>SFCCLtngPtr__Status__c</columns>
    <columns>SFCCLtngPtr__Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SFCCLtngPtr__Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <label>Rejected</label>
</ListView>